--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,37 @@
 <resources>
     <string name="app_name">Randomizer</string>
 
-    <string name="title_section1">Rotation Vector</string>
-    <string name="title_section2">Accelerometer</string>
+    <string name="title_section1">Capturing</string>
+    <string name="title_section2">Sensor Values</string>
     <string name="title_section3">Sensor 3</string>
     <string name="title_rotationvector">Rotation Vector</string>
     <string name="title_accelerometer">Accelerometer</string>
+    <string name="title_ambienttemperature">Ambient Temperature</string>
+    <string name="title_battery">Battery</string>
     <string name="title_gravity">Gravity</string>
     <string name="title_gyroscope">Gyroscope</string>
-    <string name="title_proximity">Proximity</string>
     <string name="title_light">Light</string>
+    <string name="title_linearaccelerometer">Linear Accelerometer</string>
+    <string name="title_magnetic">Magnetic Field</string>
+    <string name="title_microphone">Microphone</string>
+    <string name="title_orientation">Orientation</string>
+    <string name="title_proximity">Proximity</string>
+    <string name="title_temperature">Temperature</string>
 
     <string name="ms2_unit"> m/s<sup>2</sup></string>
     <string name="rads_unit"> rad/s</string>
     <string name="lx_unit"> lx</string>
     <string name="cm_unit"> cm</string>
-    <string name="number_example">0,55na55</string>
+    <string name="mt_unit"> μT</string>
+    <string name="degrees_unit"> °</string>
+    <string name="degreescelsius_unit"> °C</string>
+    <string name="number_example">NoSupp</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+    <string name="btnCapture">capture</string>
 
     <string name="action_settings">Settings</string>
 </resources>
